tp4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-pod
  namespace: my-namespace
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-nginx-pod
  template:
    metadata:
      labels:
        app: my-nginx-pod
    spec:
      containers:
        - name: nginx
          image: registry.cluster.wik.cloud/public/echo
          ports:
          - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
