tp4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: my-namespace
spec:
  selector:
    app: my-nginx-pod
  ports:
  - port: 8080
    targetPort: 8080
