ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: my-namespace
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: tp4.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 8080
